# polkadot-app-template

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  cdm.json
.claude/agents/: feature-builder.md  polkadot-reviewer.md
.claude/commands/: deploy.md  goal.md
.claude/memory/: MEMORY.md
.github/: copilot-instructions.md
contracts/leaderboard/: Cargo.toml
landing/: index.html
scripts/: install-deploy-tools.sh
src/: utils.ts
